# Minesweeper

./: .gitignore  CMakeLists.txt  Minesweeper.pro  README.md  board.cpp  board.h  cell.cpp  cellitem.cpp  cellitem.h  counter.cpp  counter.h  enums.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  qextendedbutton.cpp  qextendedbutton.h  qrightclickbutton.h  textures.qrc
